19508 FIX Fix icons contrast in dark theme
Some icons such as the one to reset a search or "Show more" were
shown too dark in the dark theme, because their light theme
variant was used instead. This problem is now fixed.

CMK-32726

--- a/packages/cmk-frontend/src/themes/facelift/scss/_more.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_more.scss
@@ -64,7 +64,7 @@ a.more {
 
     /* stylelint-disable-next-line selector-pseudo-element-colon-notation */
     &:after {
-      content: url('../facelift/images/icon_show_more.svg');
+      content: url('images/icon_show_more.svg');
     }
   }
 
@@ -78,7 +78,7 @@ a.more {
 
       /* stylelint-disable-next-line selector-pseudo-element-colon-notation */
       &:after {
-        content: url('../facelift/images/icon_show_less.svg');
+        content: url('images/icon_show_less.svg');
       }
     }
   }
